--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "UEC_GPAfilter",
-    "description": "不可の単位を見えなくし、GPAを再計算します。",
+    "name": "TDU_GPAfilter",
+    "description": "D評価の単位を見えなくし、GPAを再計算します。",
     "version": "1.0",
     "background": {
       "scripts": ["background.js"],
@@ -10,7 +10,7 @@
     "content_scripts": [
     {
       "matches": [
-          "https://campusweb.office.uec.ac.jp/*"
+          "https://portal.sa.dendai.ac.jp/"
       ],
       "css": ["contents_style.css"],
       "js": ["main.js"]
